--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-faq-component": "^1.3.4",
     "react-fast-marquee": "^1.6.5",
+    "react-spring": "^9.7.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
