--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@heroui/react": "^2.6.14",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-faq-component": "^1.3.4",
     "react-fast-marquee": "^1.6.5",
     "react-spring": "^9.7.5",
-    "tailwind-merge": "^2.6.0"
+    "swiper": "^11.2.4",
+    "tailwind-merge": "^2.6.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
